prikaz postova popravljen